# youtube-niche

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.claude/skills/niche-coach/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  evaluation_feedback.md  feature_request.md
.github/workflows/: ci.yml
community/: README.md
community/examples/: sample-resolved-snapshots.csv
docs/: LAUNCH.md  ROADMAP.md
examples/: README.md  demo-report.md
tests/: test_enrichments.py  test_ledger_guard.py  test_llm_failover.py  test_logic.py  test_product_fit.py  test_retention.py  test_trends_fallback.py
youtube_niche/: __init__.py  audit.py  auth.py  backtest.py  benchmark.py  cache.py  calibrate.py  candidates.py  channel_size.py  cli.py  community.py  config.py  demo.py  discover.py  discovered_subtopics.json  domains.py  enrich.py  evidence.py  evidence_snapshot.py  external.py  fixtures.py  formats.py  forward.py  llm.py  monetization.py  relevance.py  report.py  retention.py  score.py  seeds.py  subtopics.py  topics.py  transcript.py  util.py  wayback.py  weighting.py  winners.py  youtube_client.py
youtube_niche/signals/: __init__.py  comments.py  outlier.py  quality.py  supply.py  trends.py  volume.py
